<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseMatesClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="mycourses">My courses</string>
    <string name="username">Username</string>
    <string name="save_password">Save password</string>
    <string name="register">Register</string>
    <string name="new_course">Register for new course</string>
    <string name="loading">Loading</string>

</resources>