<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Authentication" >

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Login_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Login_button"
        android:layout_marginBottom="24dp"
        android:text="@string/register" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView_username"
        android:layout_below="@+id/autoCompleteTextView_username"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkBox_savepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/save_password"
        android:text="@string/save_password" />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignRight="@+id/autoCompleteTextView_username"
        android:layout_below="@+id/checkBox_savepassword"
        android:layout_marginTop="23dp"
        android:text="@string/login" />
   
</RelativeLayout>